# cookiecutter-flask-boring

./: README.md  cookiecutter.json  test-config.json
hooks/: post_gen_project.py
{{cookiecutter.package_name}}/: .env.example  .gitignore  Makefile  README.md  db.sh  mysql.sh  pyproject.toml
{{cookiecutter.package_name}}/assets/: package.json  webpack.config.js
{{cookiecutter.package_name}}/assets/src/: index.js  styles.scss
{{cookiecutter.package_name}}/tests/: test_{{cookiecutter.package_name}}.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: __init__.py  admin.py  assets.py  auth.py  db.py  errors.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/private/: __init__.py  views.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/private/templates/private/: added-data.html  index.html
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/public/: __init__.py  views.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/public/templates/public/: index.html
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/static/: styles.css
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/stripe/: __init__.py  models.py  views.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/stripe/templates/stripe/: checkout.html  success.html
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/templates/: base.html  error.html  nav.html
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/{{cookiecutter.app_bp_name}}/: __init__.py  models.py  views.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/{{cookiecutter.app_bp_name}}/templates/{{cookiecutter.app_bp_name}}/: added-data.html  index.html
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/{{cookiecutter.index_bp_name}}/: __init__.py  views.py
