{%- if cookiecutter.use_poetry == 'y' -%}
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
include = ["**/static/**/*", "**/templates/**/*"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4"
python-dotenv = "^1.0.1"
flask = ">=3.0.2,<4"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
flask-login = "^0.6.3"
{%- if cookiecutter.auth == "auth0" %}
flask-dance = {extras = ["sqla"], version = "^7.1.0"}{% endif %}
{%- if cookiecutter.with_admin == 'y' %}
flask-admin = "^1.6.1"{% endif %}
{%- if cookiecutter.db == 'mysql' %}
pymysql = "^1.1.0"{% endif %}
{%- if cookiecutter.with_stripe == 'y' %}
stripe = "^8.7.0"{% endif %}

[tool.poetry.group.dev.dependencies]
pytest = ">=8,<9"
{%- if cookiecutter.use_flake8 == 'y' %}
flake8 = ">=7,<8"{% endif %}
{%- if cookiecutter.use_black == 'y' %}
black = ">=24.2.0,<25"{% endif %}
{%- if cookiecutter.use_black == 'y' and cookiecutter.use_isort == 'y' %}
isort = ">=5.13.1,<6"{% endif %}
{%- if cookiecutter.use_mypy == 'y' %}
mypy = ">=1.8.0,<2"{% endif %}
{%- else -%}
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.package_name}}"
version = "1.0.0"
requires-python = ">=3.8.1,<4"
dependencies = [
    "Flask>=3.0.2,<4",
    "flask-sqlalchemy>=3.1.1,<4",
    "flask-migrate>=4.0.5,<5",
    "flask-login>=0.6.3,<1",
    {%- if cookiecutter.auth == "auth0" %}
    "flask-dance[sqla]>=7.1.0,<8"}{% endif %}
    {%- if cookiecutter.with_admin == 'y' %}
    "flask-admin>=1.6.1,<2"{% endif %}
    {%- if cookiecutter.db == 'mysql' %}
    "pymysql>=1.1.0,<2"{% endif %}
    {%- if cookiecutter.with_stripe == 'y' %}
    "stripe>=8.7.0,<9"{% endif %}
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    {%- if cookiecutter.use_flake8 == 'y' %}
    "flake8>=7,<8",{% endif %}
    {%- if cookiecutter.use_black == 'y' %}
    "black>=24.2.0,<25",{% endif %}
    {%- if cookiecutter.use_black == 'y' and cookiecutter.use_isort == 'y' %}
    "isort>=5.13.1,<6",{% endif %}
    {%- if cookiecutter.use_mypy == 'y' %}
    "mypy>=1.8.0,<2",{% endif %}
]

[tool.setuptools.package-data]
"*" = ["**/static/**/*", "**/templates/**/*"]
{%- endif %}

[tool.pytest.ini_options]
testpaths = ["tests"]

{%- if cookiecutter.use_black == 'y' %}

[tool.black]
line-length = 88
{%- endif %}
{%- if cookiecutter.use_black == 'y' and cookiecutter.use_isort == 'y' %}

[tool.isort]
profile = "black"
{%- endif %}
{%- if cookiecutter.use_mypy == 'y' %}

[tool.mypy]
ignore_missing_imports = true
files = "{{cookiecutter.package_name}},tests"
{%- endif %}
